2009-08-06  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- Use positive numbers for error constants.
	- Utilize PHP interface to make sure each notation implements all
	  necessary methods.
	* notation/*.php:
	- Utilize PHP interface.
	* notation/guido.php:
	- Add all dummy functions necessary for PHP interface.

2009-08-04  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- Move default setting definition to each notation file.
	- (scorerender_get_def_settings) Add hook for defining default
	  settings.
	- (scorerender_init_class, scorerender_conversion_hook) Adopt for
	  change of structure of $notations.
	* scorerender-class.php:
	- (set_img_width) Simplify string.
	* notation/*.php:
	- (is_notation_usable, program_setting_entry) Adopt for change of
	  structure of $notations.
	- (define_setting_type) New func.

2009-08-03  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- scorerender_filter() -> scorerender_init_class(), better reflecting
	  its actual purpose.
	- scorerender_do_conversion() -> scorerender_conversion_hook()
	* scorerender-class.php, notation/*.php:
	- (program_setting_entry): Drop $id parameter.

2009-08-01  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php (scorerender_admin_section_prog):
	- Move program settings in admin page to each notation php.
	* scorerender-class.php, notation/*.php:
	- (program_setting_entry) New func for generating HTML fragment for
	  admin page.

2009-07-30  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- Move notation data to each notation file.
	* scorerender-class.php:
	- Mark is_web_hosting() and is_prog_usable() as static function.
	* scorerender-admin.php (scorerender_update_options):
	- Move error messages and program checking to each notation file, and
	  use wordpress hook to execute them.
	* notation/{abc,lilypond,mup,pmw}.php:
	- (define_admin_messages): New func.
	- (is_notation_usable): Reworked to produce error message as well.