@@ -142,7 +142,7 @@ protected function conversion_step2 ($intermediate_image, $final_image)
  * @param array $opt Array of ScoreRender options, containing all program paths
  * @uses ScoreRender::is_prog_usable()
  */
-public static function is_notation_usable (&$errmsgs, &$opt)
+public static function is_notation_usable ($errmsgs, $opt)
 {
 	global $notations;
 
@@ -177,7 +177,7 @@ public function set_magic_file_hook ($options)
  * Define any additional error or warning messages if settings for notation
  * has any problem.
  */
-public static function define_admin_messages (&$adm_msgs)
+public static function define_admin_messages ($adm_msgs)
 {
 	global $notations;
 
@@ -210,7 +210,7 @@ public static function program_setting_entry ($output)
 /**
  * Define types of variables used for notation
  */
-public static function define_setting_type (&$settings)
+public static function define_setting_type ($settings)
 {
 	global $notations;
 
